crictracker-helmcharts-prod-main/crictracker-ingress-monitoring/templates/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crictracker-monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:693583001687:certificate/a98e8d06-f891-4338-9143-1220fa55592c
    alb.ingress.kubernetes.io/group.name: crictracker-devstag-new
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "14"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "8"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-077b67cb6983824ae, subnet-079a2bebf229cbae2
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    external-dns.alpha.kubernetes.io/hostname: grafana.beta.crictracker.com
spec:
  rules:
  - host: grafana.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: kps-grafana
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
